fix for rss feed icon not showing up

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://colorlib.com/wp/themes/sparkling
 Author: Colorlib
 Author URI: http://colorlib.com/
 Description: Sparkling is a clean minimal and responsive WordPress theme well suited for travel, health, business, finance, portfolio, design, art, photography, personal, ecommerce and any other creative websites and blogs. Developed using Bootstrap 3 that makes it mobile and tablets friendly. Theme comes with full-screen slider, social icon integration, author bio, popular posts widget and improved category widget. Sparkling incorporates latest web standards such as HTML5 and CSS3 and is SEO friendly thanks to its clean structure and codebase. It has dozens of Theme Options based on WordPress Customizer to change theme layout, colors, fonts, slider settings and much more. Theme is also translation and multilingual ready, compatible with WPML and is available in Spanish, French, Dutch, Polish, Russian, German, Brazilian Portuguese, Portuguese (Portugal), Persian (Iranian language), Romanian, Turkish, Bulgarian, Japanese, Lithuanian, Czech, Ukrainian, Traditional Chinese, Simplified Chinese, Indonesian, Estonian, Spanish (Argentina), Hungarian and Italian. Sparkling is a free WordPress theme with premium functionality and design. Theme is ecommerce ready thanks to its WooCommerce integration. Now theme is optimized to work with bbPress, Contact Form 7, Jetpack, WooCommerce and other popular free and premium plugins. Lately we introduced a sticky/fixed navigation that you can enable or disable via WordPress Customizer.
-Version: 2.3.5
+Version: 2.4.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: sparkling
@@ -1813,6 +1813,10 @@ p.logged-in-as {
     background-color: #42A6D5 !important;
 }
 
+#menu-social li a[href*="dl.acm.org"]:hover {
+    background-color: #AEC85C !important;
+}
+
 #menu-social li a[href*="arxiv.org"]:hover {
     background-color: #68645B !important;
 }
@@ -2059,9 +2063,10 @@ p.logged-in-as {
     content: "\f16c"
 }
 
-#menu-social li a[href*="feed"]:before {
+#menu-social li a[href*="/feed"]:before {
     font-family: 'Font Awesome\ 5 Free';
-    content: "\f09e"
+    content: "\f09e";
+    font-weight: 900;
 }
 
 #menu-social li a[href*="dribbble.com"]:before {
